fixed z-index issue

--- a/source/site/frontend/css/modal.css
+++ b/source/site/frontend/css/modal.css
@@ -6,7 +6,7 @@
   position: fixed;
 
   /* Stay in place */
-  z-index: 1;
+  z-index: 4;
 
   /* Sit on top */
   padding-top: 100px;
