--- a/source/site/frontend/css/settings.css
+++ b/source/site/frontend/css/settings.css
@@ -3,8 +3,13 @@
 }
 
 body {
-  background: #ddd;
+  background: #473030;
   font-family: "monospace";
+}
+
+.settings-close {
+  z-index: 4;
+  position: absolute;
 }
 
 .tabs {
@@ -18,6 +23,7 @@ body {
   background: #f5f5f5;
   box-shadow: 5px 5px 10px 5px #ccc;
   overflow: hidden;
+  z-index: 3;
 }
 
 .tabs .tab-header {
